@@ -126,7 +126,7 @@ $html_delete = 'Skrap';
 $html_new = 'Nuut';
 $html_mark = 'Skrap';
 $html_att_label = 'Aanhangsel:';
-$html_atts_label_label = 'Aanhangsels:';
+$html_atts_label = 'Aanhangsels:';
 $html_unknown = '[onbekend]';
 $html_attach = 'Aanheg';
 $html_attach_forget = 'U moet u lêer aanheg alvorens u die boodskap stuur!';
