@@ -114,7 +114,7 @@ $html_delete = 'ءازالة';
 $html_new = 'جديد';
 $html_mark = 'محو';
 $html_att_label = 'مرفق:';
-$html_atts_label_label = 'مرفقات:';
+$html_atts_label = 'مرفقات:';
 $html_unknown = '[غير معروف]';
 $html_attach = 'ءاضافة';
 $html_attach_forget = '!يجب ءاضافه الملف قبل ءارسال الرسالة';
