@@ -110,7 +110,7 @@ $html_delete = 'Изтрий';
 $html_new = 'Ново';
 $html_mark = 'Маркирай';
 $html_att_label = 'Прикачен файл:';
-$html_atts_label_label = 'Прикачени файлове:';
+$html_atts_label = 'Прикачени файлове:';
 $html_attach = 'Прикачи';
 $html_attach_forget = 'Прикачи файла преди да изпратиш съобщението!';
 $html_attach_delete = 'Изтрий прикачения файл';
