@@ -128,7 +128,7 @@ $html_delete = 'Diverkañ';
 $html_new = 'Nevez';
 $html_mark = 'Diverkañ';
 $html_att_label = 'Pezh stag :';
-$html_atts_label_label = 'Pezhioù stag :';
+$html_atts_label = 'Pezhioù stag :';
 $html_unknown = '[dianav]';
 $html_attach = 'Stagañ';
 $html_attach_forget = 'Ret eo deoc\'h stagañ ho restr a-raok kas ar gemennadenn !';
