@@ -127,7 +127,7 @@ $html_delete = 'Brisanje';
 $html_new = 'Nova';
 $html_mark = 'Obriši';
 $html_att_label = 'Prilog:';
-$html_atts_label_label = 'Prilozi:';
+$html_atts_label = 'Prilozi:';
 $html_unknown = '[nepoznato]';
 $html_attach = 'Dodaj';
 $html_attach_forget = 'Morate dodati Vašu datoteku prije slanja poruke!';
