@@ -131,7 +131,7 @@ $html_delete = 'Elimina';
 $html_new = 'Nou';
 $html_mark = 'Elimina';
 $html_att_label = 'Adjunt:';
-$html_atts_label_label = 'Fitxers adjunts:';
+$html_atts_label = 'Fitxers adjunts:';
 $html_unknown = '[desconegut]';
 $html_attach = 'Adjuntar';
 $html_attach_forget = 'Heu d\'adjuntar el fitxer abans d\'enviar el vostre missatge!';
