@@ -131,7 +131,7 @@ $html_delete = 'Vymazat';
 $html_new = 'Nová';
 $html_mark = 'Vymazat';
 $html_att_label = 'Příloha:';
-$html_atts_label_label = 'Přílohy:';
+$html_atts_label = 'Přílohy:';
 $html_unknown = '[neznámá]';
 $html_attach = 'Přiložit';
 $html_attach_forget = 'Soubor musí být přiložen před odesláním zprávy';
