@@ -128,7 +128,7 @@ $html_delete = 'Dileu';
 $html_new = 'Newydd';
 $html_mark = 'Dileu';
 $html_att_label = 'Atodiad:';
-$html_atts_label_label = 'Ymgysylltiadau:';
+$html_atts_label = 'Ymgysylltiadau:';
 $html_unknown = '[anhysbys]';
 $html_attach = 'Atodi';
 $html_attach_forget = 'Rhaid i chi atodi\'r ffeil cyn anfon y neges!';
