@@ -135,7 +135,7 @@ $html_delete = 'Löschen';
 $html_new = 'Neu';
 $html_mark = 'Löschen';
 $html_att_label = 'Anhang:';
-$html_atts_label_label = 'Anhänge:';
+$html_atts_label = 'Anhänge:';
 $html_unknown = '[unbekannt]';
 $html_attach = 'Anhängen';
 $html_attach_forget = 'Sie müssen die Datei vor dem Senden der Nachricht anhängen!';
