@@ -126,7 +126,7 @@ $html_delete = 'Wulašowaś';
 $html_new = 'Nowy';
 $html_mark = 'Wulašowaś';
 $html_att_label = 'Dodank:';
-$html_atts_label_label = 'Dodanki:';
+$html_atts_label = 'Dodanki:';
 $html_unknown = '[njeznaty]';
 $html_attach = 'Dodaś';
 $html_attach_forget = 'Musyš swóju dataju do wótpósćelanja swójeje powěsći dodaś!';
