@@ -156,7 +156,7 @@ $html_delete = 'Delete';
 $html_new = 'New';
 $html_mark = 'Delete';
 $html_att_label = 'Attachment:';
-$html_atts_label_label = 'Attachments:';
+$html_atts_label = 'Attachments:';
 $html_unknown = '[unknown]';
 $html_attach = 'Attach';
 $html_attach_forget = 'You must attach your file before sending your message!';
