@@ -131,7 +131,7 @@ $html_delete = 'Borrar';
 $html_new = 'Nuevo';
 $html_mark = 'Borrar';
 $html_att_label = 'Archivo adjunto:';
-$html_atts_label_label = 'Adjuntos:';
+$html_atts_label = 'Adjuntos:';
 $html_unknown = '[desconocido]';
 $html_attach = 'Adjuntar';
 $html_attach_forget = '¡Debe adjuntar sus archivos antes de enviar su mensaje!';
