@@ -131,7 +131,7 @@ $html_delete = 'Poista';
 $html_new = 'Uusi';
 $html_mark = 'Poista';
 $html_att_label = 'Liite:';
-$html_atts_label_label = 'Liitteet:';
+$html_atts_label = 'Liitteet:';
 $html_unknown = '[tuntematon]';
 $html_attach = 'Liitä';
 $html_attach_forget = 'Sinun täytyy liittää tiedosto(t) ennen lähetystä.';
