@@ -128,7 +128,7 @@ $html_delete = 'Supprimer';
 $html_new = 'Nouveau';
 $html_mark = 'Effacer';
 $html_att_label = 'Pièce jointe :';
-$html_atts_label_label = 'Pièces jointes :';
+$html_atts_label = 'Pièces jointes :';
 $html_unknown = '[inconnu]';
 $html_attach = 'Attacher';
 $html_attach_forget = 'Vous devez attacher votre fichier avant d\'envoyer votre message !';
