@@ -127,7 +127,7 @@ $html_delete = 'Borrar';
 $html_new = 'Nova';
 $html_mark = 'Borrar';
 $html_att_label = 'Dato adxunto:';
-$html_atts_label_label = 'Datos adxuntos:';
+$html_atts_label = 'Datos adxuntos:';
 $html_unknown = '[descoñecido]';
 $html_attach = 'Adxuntar';
 $html_attach_forget = 'Debe adxuntar o seu ficheiro antes de enviar a súa mensaxe!';
