@@ -127,7 +127,7 @@ $html_delete = 'Lesche';
 $html_new = 'Nej';
 $html_mark = 'Lesche';
 $html_att_label = 'Aahang:';
-$html_atts_label_label = 'Aahäng:';
+$html_atts_label = 'Aahäng:';
 $html_unknown = '[nit bekannt]';
 $html_attach = 'Aahänke';
 $html_attach_forget = 'Du muesch d Datei vo em Verschicke vu dr Nochicht aahänke !';
