@@ -126,7 +126,7 @@ $html_delete = 'מחיקה';
 $html_new = 'חדש';
 $html_mark = 'מחיקה';
 $html_att_label = 'קובץ מצורף:';
-$html_atts_label_label = 'קבצים מצורפים:';
+$html_atts_label = 'קבצים מצורפים:';
 $html_unknown = '[לא ידוע]';
 $html_attach = 'צירוף';
 $html_attach_forget = 'חייבים לצרף קובץ לפני שליחת ההודעה!';
