@@ -126,7 +126,7 @@ $html_delete = 'Zničić';
 $html_new = 'Nowy';
 $html_mark = 'Zničić';
 $html_att_label = 'Přiwěšk:';
-$html_atts_label_label = 'Přiwěški:';
+$html_atts_label = 'Přiwěški:';
 $html_unknown = '[njeznaty]';
 $html_attach = 'Připowěsnyć';
 $html_attach_forget = 'Dyrbiš swoju dataju do słanja swojeje powěsće připowěsnyć!';
