@@ -131,7 +131,7 @@ $html_delete = 'Törlés';
 $html_new = 'Új';
 $html_mark = 'Törlés';
 $html_att_label = 'Csatolt fájl:';
-$html_atts_label_label = 'Csatolmányok:';
+$html_atts_label = 'Csatolmányok:';
 $html_unknown = '[ismeretlen]';
 $html_attach = 'Csatol';
 $html_attach_forget = 'Csatolni kell a fájlt üzenetküldés elõtt !';
