@@ -127,7 +127,7 @@ $html_delete = 'Deler';
 $html_new = 'Nove';
 $html_mark = 'Deler';
 $html_att_label = 'Annexo:';
-$html_atts_label_label = 'Annexos:';
+$html_atts_label = 'Annexos:';
 $html_unknown = '[incognite]';
 $html_attach = 'Annexar';
 $html_attach_forget = 'Es necessari annexar le file ante de inviar le message!';
