@@ -128,7 +128,7 @@ $html_delete = 'Hapus';
 $html_new = 'Baru';
 $html_mark = 'Hapus';
 $html_att_label = 'Lampiran:';
-$html_atts_label_label = 'Lampiran:';
+$html_atts_label = 'Lampiran:';
 $html_unknown = '[tidak diketahui]';
 $html_attach = 'Terlampir';
 $html_attach_forget = 'Anda harus melampirkan berkas sebelum mengirim pesan!';
