@@ -130,7 +130,7 @@ $html_delete = '削除';
 $html_new = '新規';
 $html_mark = '削除';
 $html_att_label = '添付:';
-$html_atts_label_label = '添付:';
+$html_atts_label = '添付:';
 $html_unknown = '[不明]';
 $html_attach = '添付';
 $html_attach_forget = 'ファイルはメッセージを送信する前に添付しなければなりません！';
