@@ -126,7 +126,7 @@ $html_delete = 'წაშლა';
 $html_new = 'ახალი';
 $html_mark = 'წაშლა';
 $html_att_label = 'მიმაგრებული ფაილი:';
-$html_atts_label_label = 'მიმაგრებული ფაილი:';
+$html_atts_label = 'მიმაგრებული ფაილი:';
 $html_unknown = '[უცნობია]';
 $html_attach = 'ფაილის მიმაგრება';
 $html_attach_forget = 'თქვენ უნდა მიამაგროთ ფაილი წერილის გაგზავნამდე';
