@@ -126,7 +126,7 @@ $html_delete = 'Schmiiß fott';
 $html_new = 'Neu';
 $html_mark = 'Fottschmiiße';
 $html_att_label = 'Aanhang:';
-$html_atts_label_label = 'Aanhäng:';
+$html_atts_label = 'Aanhäng:';
 $html_unknown = '[weße mer nit]';
 $html_attach = 'Draanhänge';
 $html_attach_forget = 'Do moß Ding Datei aanjehange han, ih dat De di Nohresh verschecke kanns.';
