@@ -127,7 +127,7 @@ $html_delete = 'Бриши';
 $html_new = 'Ново';
 $html_mark = 'Избриши';
 $html_att_label = 'Податотека во прилог:';
-$html_atts_label_label = 'Податитеки во прилог:';
+$html_atts_label = 'Податитеки во прилог:';
 $html_unknown = '[непознато]';
 $html_attach = 'Приложи';
 $html_attach_forget = 'Приложите ја податотеката пред да го испратите писмото!';
