@@ -126,7 +126,7 @@ $html_delete = 'मेटाउने';
 $html_new = 'नयाँ';
 $html_mark = 'मेटाउने';
 $html_att_label = 'यसमा जोडिएको:';
-$html_atts_label_label = 'यसमा जोडिएकाहरु:';
+$html_atts_label = 'यसमा जोडिएकाहरु:';
 $html_unknown = '[अज्ञात]';
 $html_attach = 'जोड्ने';
 $html_attach_forget = 'तपाईको फाइल पठाउनु अघि जोड्नु पर्ने छ!';
