@@ -134,7 +134,7 @@ $html_delete = 'Verwijderen';
 $html_new = 'Nieuw';
 $html_mark = 'Verwijderen';
 $html_att_label = 'Bijlage:';
-$html_atts_label_label = 'Bijlagen:';
+$html_atts_label = 'Bijlagen:';
 $html_unknown = '[onbekend]';
 $html_attach = 'Toevoegen';
 $html_attach_forget = 'De bijlage moet nog toegevoegd worden voor verzending!';
