@@ -129,7 +129,7 @@ $html_delete = 'Slett';
 $html_new = 'Ny';
 $html_mark = 'Slett';
 $html_att_label = 'Vedlegg:';
-$html_atts_label_label = 'Vedlegg:';
+$html_atts_label = 'Vedlegg:';
 $html_unknown = '[ukjent]';
 $html_attach = 'Legg til';
 $html_attach_forget = 'Du må legge til filen før du kan sende meldingen !';
