@@ -127,7 +127,7 @@ $html_delete = 'Suprimir';
 $html_new = 'Novèl';
 $html_mark = 'Escafar';
 $html_att_label = 'Pèça junta :';
-$html_atts_label_label = 'Pèças juntas :';
+$html_atts_label = 'Pèças juntas :';
 $html_unknown = '[desconegut]';
 $html_attach = 'Estacar';
 $html_attach_forget = 'Vos cal estacar vòstre fichièr abans de mandar vòstre messatge !';
