@@ -126,7 +126,7 @@ $html_delete = 'Usuń';
 $html_new = 'Nowy';
 $html_mark = 'Zaznacz';
 $html_att_label = 'Załącznik';
-$html_atts_label_label = 'Załączniki:';
+$html_atts_label = 'Załączniki:';
 $html_unknown = '[nieznany]';
 $html_attach = 'Dołącz';
 $html_attach_forget = 'Zanim wyślesz wiadomość musisz dołączyć załączniki!';
