@@ -133,7 +133,7 @@ $html_delete = 'Excluir';
 $html_new = 'Novo';
 $html_mark = 'Excluir';
 $html_att_label = 'Anexo:';
-$html_atts_label_label = 'Anexos:';
+$html_atts_label = 'Anexos:';
 $html_unknown = '[Desconhecido]';
 $html_attach = 'Anexar arquivo';
 $html_attach_forget = 'Você precisa anexar seus arquivos antes de enviar esta mensagem !';
