@@ -133,7 +133,7 @@ $html_delete = 'Удалить';
 $html_new = 'Новое';
 $html_mark = 'Удалить';
 $html_att_label = 'Прикрепленный файл:';
-$html_atts_label_label = 'Прикрепленные файлы:';
+$html_atts_label = 'Прикрепленные файлы:';
 $html_unknown = '[неизвестно]';
 $html_attach = 'Прикрепить файл';
 $html_attach_forget = 'Вы должны прикрепить файл до отправки сообщения!';
