@@ -128,7 +128,7 @@ $html_delete = 'Vymazať';
 $html_new = 'Nový';
 $html_mark = 'Vymazať';
 $html_att_label = 'Príloha:';
-$html_atts_label_label = 'Prílohy:';
+$html_atts_label = 'Prílohy:';
 $html_unknown = '[neznámy]';
 $html_attach = 'Pripojiť prílohu';
 $html_attach_forget = 'Pred odoslaním správy musíte pripojiť prílohu!';
