@@ -123,7 +123,7 @@ $html_delete = 'அழி';
 $html_new = 'புதிய';
 $html_mark = 'அழி';
 $html_att_label = 'இணைப்பு';
-$html_atts_label_label = 'இணைப்புகள்';
+$html_atts_label = 'இணைப்புகள்';
 $html_unknown = '[அறியாத]';
 $html_attach = 'இணை';
 $html_attach_forget = 'தகவலை அனுப்புவதற்கு முன் கொப்ப்புகளை இணையுங்கள்';
