@@ -126,7 +126,7 @@ $html_delete = 'ลบ';
 $html_new = 'ใหม่';
 $html_mark = 'ลบ';
 $html_att_label = 'ไฟล์แนบ:';
-$html_atts_label_label = 'ไฟล์แนบ:';
+$html_atts_label = 'ไฟล์แนบ:';
 $html_unknown = '[ไม่รู้จัก]';
 $html_attach = 'แนบ';
 $html_attach_forget = 'คุณต้องแนบไฟล์ก่อนที่จะส่งจดหมาย !';
