@@ -128,7 +128,7 @@ $html_delete = 'Sil';
 $html_new = 'Yeni';
 $html_mark = 'Sil';
 $html_att_label = 'Ek:';
-$html_atts_label_label = 'Ekler:';
+$html_atts_label = 'Ekler:';
 $html_unknown = '[bilinmiyor]';
 $html_attach = 'Ekle';
 $html_attach_forget = 'İletiyi göndermeden önce dosyayı eklemelisiniz !';
